have hopefully fixed an issue with the map on mobile?

--- a/capstone/capstone-site.css
+++ b/capstone/capstone-site.css
@@ -334,6 +334,7 @@ p {
 #panel3 {
 	text-align: center;
 	padding-bottom: 0%;
+	margin-bottom: 0;
 	padding-top: 5em;
 }
 .sunrise {
